# Product-Inventory-System-with-Stock-Management

./: README.md
pis-backend/: db.sqlite3  manage.py  pyproject.toml
pis-backend/pisbackend/: asgi.py  settings.py  urls.py  wsgi.py
pis-backend/products/: models.py  serializers.py  urls.py  views.py
pis-backend/products/migrations/: 0001_initial.py
pis-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
pis-frontend/src/: App.jsx  index.css
pis-frontend/src/components/: AddProduct.jsx  AddProductForm.jsx  ProductList.jsx
pis-frontend/src/components/ui/: Button.jsx  Dialog.jsx  Input.jsx  Table.jsx
